SMAR-578: use new frontend project | fixes

--- a/default.env
+++ b/default.env
@@ -11,4 +11,5 @@ SMARTMONEY_HOST=http://smartmoney.com.ua
 WELCOME_HOST=http://welcome.euah.pw
 MERCHANT_HOST=http://merchant.euah.pw
 STELLAR_NETWORK=euah.network
+DOMAIN=euah.pw
 HOST=5.189.167.152
