--- a/default.env
+++ b/default.env
@@ -1,15 +1,21 @@
 MASTER_KEY=GAWIB7ETYGSWULO4VB7D6S42YLPGIC7TY7Y2SSJKVOTMQXV5TILYWBUA
-G_AGENT_KEY=GBZSRJ7BMM7ZKRARSO3AMYAYWLRLUCBXIGQ2MQKWK65ESWORA7YDMJRE
-KEYSERVER_HOST=http://keys.euah.pw
-HORIZON_HOST=http://blockchain.euah.pw
-EMISSION_HOST=http://emission.euah.pw
-RIAK_HOST=de.euah.pw
-API_HOST=http://api.euah.pw
-INFO_HOST=http://info.euah.pw
-EXCHANGE_HOST=http://exchange.euah.pw
+HORIZON_HOST=http://blockchain.smartmoney.com.ua
+EMISSION_HOST=http://emission.smartmoney.com.ua
+EMISSION_PATH=issue
+RIAK_HOST=riak.smartmoney.com.ua
+API_HOST=http://api.smartmoney.com.ua
+INFO_HOST=http://info.smartmoney.com.ua
+EXCHANGE_HOST=http://exchange.smartmoney.com.ua
 SMARTMONEY_HOST=http://smartmoney.com.ua
-WELCOME_HOST=http://welcome.euah.pw
-MERCHANT_HOST=http://merchant.euah.pw
-STELLAR_NETWORK=euah.network
-DOMAIN=euah.pw
-HOST=5.189.167.152
+WELCOME_HOST=http://welcome.smartmoney.com.ua
+MERCHANT_HOST=http://merchant.smartmoney.com.ua
+STELLAR_NETWORK=Dev Smart Money ; May 2016
+DOMAIN=smartmoney.com.ua
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURITY=ssl
+SMTP_USER=attic.it.lab@gmail.com
+SMTP_PASS=atticlab/*-2020
+SMS_AUTH_LOGIN=atticlab
+SMS_AUTH_PASS=attic.2020
+HOST=192.168.1.26
