--- a/default.env
+++ b/default.env
@@ -3,6 +3,7 @@ HORIZON_HOST=http://blockchain.smartmoney.com.ua
 EMISSION_HOST=http://emission.smartmoney.com.ua
 EMISSION_PATH=issue
 RIAK_HOST=riak.smartmoney.com.ua
+RIAK_PORT=80
 API_HOST=http://api.smartmoney.com.ua
 INFO_HOST=http://info.smartmoney.com.ua
 EXCHANGE_HOST=http://exchange.smartmoney.com.ua
