--- a/default.env
+++ b/default.env
@@ -1,23 +1,8 @@
-MASTER_KEY=GAWIB7ETYGSWULO4VB7D6S42YLPGIC7TY7Y2SSJKVOTMQXV5TILYWBUA
-HORIZON_HOST=http://blockchain.smartmoney.com.ua
-EMISSION_HOST=http://emission.smartmoney.com.ua
-EMISSION_PATH=issue
-RIAK_HOST=riak.smartmoney.com.ua
-RIAK_PORT=80
-API_HOST=http://api.smartmoney.com.ua
-INFO_HOST=http://info.smartmoney.com.ua
-EXCHANGE_HOST=http://exchange.smartmoney.com.ua
-SMARTMONEY_HOST=http://smartmoney.com.ua
-WELCOME_HOST=http://welcome.smartmoney.com.ua
-MERCHANT_HOST=http://merchant.smartmoney.com.ua
-#stellar network passphrase
-STELLAR_NETWORK=Dev Smart Money ; May 2016
-#destination domain for proxy pass
-DOMAIN=smartmoney.com.ua
+111
 #destination host for proxy pass
 HOST=192.168.1.26
 SMTP_HOST=asd
-SMTP_PORT=sda
-SMTP_SECURITY=asd
+SMTP_PORT=fas
+SMTP_SECURITY=afs
 SMTP_USER=asf
-SMTP_PASS=asd
+SMTP_PASS=asf
