--- a/clear.env
+++ b/clear.env
@@ -7,7 +7,7 @@ RIAK_PORT=80
 API_HOST=http://api.smartmoney.com.ua
 INFO_HOST=http://info.smartmoney.com.ua
 EXCHANGE_HOST=http://exchange.smartmoney.com.ua
-SMARTMONEY_HOST=http://smartmoney.com.ua
+HELP_URL=http://smartmoney.com.ua/docs/api-reference
 WELCOME_HOST=http://welcome.smartmoney.com.ua
 MERCHANT_HOST=http://merchant.smartmoney.com.ua
 #stellar network passphrase
