--- a/default.env
+++ b/default.env
@@ -1,8 +1,24 @@
-111
+MASTER_KEY=GAWIB7ETYGSWULO4VB7D6S42YLPGIC7TY7Y2SSJKVOTMQXV5TILYWBUA
+HORIZON_HOST=http://blockchain.smartmoney.com.ua
+EMISSION_HOST=http://emission.smartmoney.com.ua
+EMISSION_PATH=issue
+RIAK_HOST=riak.smartmoney.com.ua
+RIAK_PORT=80
+API_HOST=http://api.smartmoney.com.ua
+INFO_HOST=http://info.smartmoney.com.ua
+EXCHANGE_HOST=http://exchange.smartmoney.com.ua
+HELP_URL=http://smartmoney.com.ua/docs/api-reference
+WELCOME_HOST=http://welcome.smartmoney.com.ua
+MERCHANT_HOST=http://merchant.smartmoney.com.ua
+#stellar network passphrase
+STELLAR_NETWORK=Dev Smart Money ; May 2016
+#destination domain for proxy pass
+DOMAIN=smartmoney.com.ua
 #destination host for proxy pass
 HOST=192.168.1.26
-SMTP_HOST=asd
-SMTP_PORT=fas
-SMTP_SECURITY=afs
-SMTP_USER=asf
-SMTP_PASS=asf
+PROJECT_NAME=test
+SMTP_HOST=test
+SMTP_PORT=test
+SMTP_SECURITY=test
+SMTP_USER=test
+SMTP_PASS=test
