remove default env

--- a/default.env
+++ b/default.env
@@ -16,9 +16,9 @@ STELLAR_NETWORK=Dev Smart Money ; May 2016
 DOMAIN=smartmoney.com.ua
 #destination host for proxy pass
 HOST=192.168.1.26
-PROJECT_NAME=test
-SMTP_HOST=test
-SMTP_PORT=test
-SMTP_SECURITY=test
-SMTP_USER=test
-SMTP_PASS=test
+PROJECT_NAME=asdasd
+SMTP_HOST=asdasd
+SMTP_PORT=asdasd
+SMTP_SECURITY=asdasd
+SMTP_USER=asdasd
+SMTP_PASS=asdasd
